Add Cognito auth for saved watchlists
